tests/baselines/reference/objectLiteralParameterResolution.errors.txt
==== tests/cases/compiler/objectLiteralParameterResolution.ts (6 errors) ====
    interface Foo{
        extend<T>(target: T, ...objs: any[]): T;
        extend<T>(deep: boolean, target: T, ...objs: any[]): T;
    }
    declare var $: Foo;
    var s = $.extend({
        type: "GET" ,
        data: "data" ,
        success: wrapSuccessCallback(requestContext, callback) ,
                 ~~~~~~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'wrapSuccessCallback'.
                                     ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'requestContext'.
                                                     ~~~~~~~~
!!! error TS2095: Could not find symbol 'callback'.
        error: wrapErrorCallback(requestContext, errorCallback) ,
               ~~~~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'wrapErrorCallback'.
                                 ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'requestContext'.
                                                 ~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'errorCallback'.
        dataType: "json" ,
        converters: { "text json": "" },
        traditional: true ,
        timeout: 12,
        }, "");
    